# athena

./: .env.example  .gitignore  PRD.md  README.md  TIMELINE.md  package-lock.json  package.json  pyproject.toml  vercel.json
athena/: package.json
athena/convex/: portfolios.ts
athena/src/app/: ConvexClientProvider.tsx  globals.css  page.tsx
athena/src/app/api/market-data/: route.ts
athena/src/components/: PriceChart.tsx
athena/src/lib/: polygon.ts
convex/: auth.config.ts  auth.ts  chatSessions.ts  paperTrades.ts  schema.ts  secFilings.ts  tsconfig.json  userPreferences.ts  watchlists.ts
convex/_generated/: api.d.ts
python-service/: .env.example  main.py  pyproject.toml  requirements.txt
scripts/: debug-hyperspell-storage.ts  init-auth-db.js  test-hyperspell-memory.ts  test-memory-logs.ts  test-query-router.ts
src/app/: ConvexClientProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/api/admin/ingest-filing/: route.ts
src/app/api/admin/list-filings/: route.ts
src/app/api/agentmail/send-alert/: route.ts
src/app/api/agentmail/webhook/: route.ts
src/app/api/ai/chat/: route.ts
src/app/api/ai/edgar/: route.ts
src/app/api/ai/perplexity/: route.ts
src/app/api/ai/social/: route.ts
src/app/api/auth/[...all]/: route.ts
src/app/api/market-data/: route.ts
src/app/api/trading/account/: route.ts
src/app/api/trading/close/: route.ts
src/components/: PortfolioDashboard.tsx  PriceChart.tsx  TradingPanel.tsx
src/lib/: agentmail.ts  alpaca.ts  hyperspell.ts  queryGenerator.ts  queryRouter.ts
src/utils/: email-templates.ts  intent-parser.ts
(+6 files in other folders)
