[project]
name = "athena"
version = "0.1.0"
description = "athena"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "browser-use-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "hyperspell>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python-service"]
